<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".UserTypeActivity">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="248dp"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_admin"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/button_admin" />

        <Button
            android:id="@+id/button_doctor"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/button_doctor" />

        <Button
            android:id="@+id/button_patient"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/button_patient" />

        <Button
            android:id="@+id/button_observer"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/button_observer" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>